tests/semantic/invalid/struct-assignment-type-mismatch.inox
Module StructAssignmentMismatch

Type
    TPoint Struct
        FX Integer
    ;

    TOther Struct
        FX Integer
    ;

Main() :
    Var
        P TPoint
        O TOther
    ;

    P := O
;
